--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -1,4 +1,42 @@
 section.hero {
-	min-height: 400px;
-	background: lightGrey;
+    background: lightGrey;
+    overflow: hidden;
+    position: relative;
+    height: 100%;
+    text-align: center;
+    .bg {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        margin: 0;
+        background-image: url(http://www.strangelove.nl/img/header-2.jpg);
+        background-position: center;
+        background-size: cover;
+        display: block;
+    }
+    .content {
+        text-align: center;
+        position: absolute;
+        top: 40%;
+        left: 0;
+        right: 0;
+    }
+}
+
+.text-lined {
+	border-top: 1px solid #fff;
+	border-bottom: 1px solid #fff;
+	max-width: 600px;
+	margin: 0 auto;
+	text-align: center;
+
+	padding: 24px 0;
+	color: #fff;
+	font-size: 1.6em;
+	strong {
+		display: block;
+		text-transform: uppercase;
+	}
 }
