Ignore updated, Parallax support

--- a/src/css/components/section.css
+++ b/src/css/components/section.css
@@ -1,7 +1,10 @@
-section.content {
+section.page {
 	padding: 80px 0;
 	text-align: center;
 
+	.content {
+		position: relative;
+	}
 	&.dark {
 		background: $section-dark-bg-color;
 	}
