--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -11,4 +11,4 @@ $navbar-bg-color: transparent;
 $navbar-scrolled-text-color: $color-brand;
 $navbar-scrolled-bg-color: #fff;
 
-$section-dark-bg-color: black;
+$section-dark-bg-color: lightGrey;
