--- a/src/css/components/cover.css
+++ b/src/css/components/cover.css
@@ -2,7 +2,10 @@
     overflow: hidden;
     position: relative;
     height: 100%;
-    text-align: center;
+
+	&.center {
+	    text-align: center;
+	}
     .bg {
         position: absolute;
         top: 0;
@@ -12,11 +15,13 @@
         margin: 0;
     }
     .content {
-        text-align: center;
         position: absolute;
-        top: 40%;
+		transform: translateY(-50%);
+        top: 50%;
         left: 0;
         right: 0;
+		max-width: 1140px;
+		margin: 0 auto;
 
 		h1 {
 			font-size: 6rem;
