--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,7 @@
 @import "effects/parallax.css";
 
 @import "components/header.css";
+@import "components/footer.css";
 @import "components/cover.css";
 @import "components/section.css";
 
