--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -276,6 +276,8 @@
 	}
 }
 .header {
+	transition: ease all 500ms;
+
 	> .container {
 		position: relative;
 	}
@@ -293,10 +295,11 @@
 		}
 	}
 	.text {
+		transition: ease all 500ms;
 		display: none;
 		@media (min-width: $screen-sm-min) {
 			display: block;
-			padding: 10px;
+			padding: 20px 10px;
 		}
 	}
 	.logo {
@@ -304,26 +307,34 @@
 		float: left;
 		position: relative;
 		a {
+			transition: ease all 500ms;
 			padding: 6px 10px;
 			display: inline-block;
 			font-size: 1.2em;
+
+			@media (min-width: $screen-sm-min) {
+				padding: 16px 10px;
+			}
+			&:hover {
+				text-decoration: none;
+			}
 		}
 	}
 	.nav-toggle {
-		margin: 12px 10px;
-		min-height: 16px;
-		width: 22px;
+		width: 20px;
 		position: relative;
 		float: right;
 		z-index: 22;
 		cursor: pointer;
+	    box-sizing: content-box;
+    	padding: 14px 10px;
 
 		@media (min-width: $screen-sm-min) {
 			display: none;
 		}
 		.bar {
 			margin-bottom: 3px;
-			height: 3px;
+			height: 2px;
 			display: block;
 			content: " ";
 			background: #000;
@@ -334,10 +345,9 @@
 			}
 		}
 		&.active {
+			padding: 18px 10px;
 			.bar {
 				margin-bottom: 0;
-				top: 6px;
-				position: absolute;
 			}
 			.bar:first-child {
 				opacity: 0;
@@ -349,6 +359,7 @@
 			.bar:nth-child(3) {
 				transform: rotateZ(45deg);
 				margin-bottom: 0;
+				margin-top: -2px;
 			}
 		}
 	}
@@ -366,38 +377,85 @@
 		}
 		&.show {
 			max-height: 100vh;
+			&.mobile-full-height {
+				height: 100vh;
+			}
 		}
 	}
 	nav {
 		.container > ul,
 		.container-fluid > ul,
 		> ul {
-			position: relative;
 			z-index: 2;
 			list-style: none;
 			margin: 0;
 			padding: 0;
 			>li {
+				&:hover {
+					> a {
+						text-decoration: none;
+						background: #fff;
+					}
+				}
 				>a {
-    				padding: 10px;
+					transition: ease all 500ms;
+					padding: 10px;
     				text-align: center;
 					display: block;
 
 					@media (min-width: $screen-sm-min) {
     					text-align: left;
+						padding: 20px 10px;
 					}
 				}
 				@media (min-width: $screen-sm-min) {
 					display: inline-block;
 				}
+				> .sub-nav {
+					max-height: 0;
+					overflow: hidden;
+					transition: all ease 500ms;
+    				z-index: 999;
+					@media (min-width: $screen-sm-min) {
+						position: absolute;
+						min-width: 200px;
+						&.mega {
+							left: 0;
+							width: 100%;
+							.container {
+								padding: 20px;
+								background: $color-dark;
+							}
+							.nav {
+								padding: 0;
+							}
+						}
+					}
+					.nav {
+						background: $color-dark;
+						display: block;
+						float: none;
+						>li {
+							float: none;
+							display: block;
+							&.title, >a {
+								display: block;
+								color: #fff;
+							}
+							&.title {
+    								padding: 10px 15px;
+								opacity: 0.4;
+								text-transform: uppercase;
+							}
+						}
+					}
+				}
+				&:hover {
+					> .sub-nav {
+						max-height: 600px;
+					}
+				}
 			}
-		}
-	}
-
-	&.dark {
-		background: $color-dark;
-		a {
-			color: #fff;
 		}
 	}
 	&.logo-center {
@@ -405,7 +463,8 @@
 		.logo {
 			float: none;
 			position: absolute;
-			width: 100%;
+			width: 20%;
+			left: 40%;
 		}
 		@media (min-width: $screen-sm-min) {
 			.text.left,
@@ -422,12 +481,49 @@
 			display: block;
 		}
 	}
-	&.nav-scrolled {
+	&.header-fixed {
 		position: fixed;
 		top: 0;
 		width: 100%;
+		z-index: 999;
 	}
-	&.header-air {}
+	&.scrolled {
+		background: #fff;
+		@media (min-width: $screen-sm-min) {
+			.logo a {
+				padding: 6px 10px;
+			}
+			.text,
+			nav > ul >li >a {
+				padding: 10px;
+			}
+		}
+	}
+	&.dark {
+		background: $color-dark;
+		a {
+			color: #fff;
+		}
+		.nav-toggle .bar {
+			background: #fff;
+		}
+	}
+	&.header-air {
+		a {
+			color: #fff;
+		}
+		.nav-toggle .bar {
+			background: #fff;
+		}
+		&.scrolled {
+			a {
+				color: #000;
+			}
+			.nav-toggle .bar {
+				background: #000;
+			}
+		}
+	}
 	&.header-light {}
 	&.header-dark {}
 }
