--- a/src/css/base/buttons.css
+++ b/src/css/base/buttons.css
@@ -10,6 +10,9 @@
     border: 1px solid transparent;
 	background: $color-brand;
 	color: #fff;
+	&:hover {
+		color: #fff;
+	}
 	&.small {
     	padding: 4px 14px;
 		font-size: 0.8em;
@@ -29,5 +32,8 @@
 	}
 	&.round {
 		border-radius: $border-radius;
+	}
+	&.rounder {
+		border-radius: 24px;
 	}
 }
