--- a/src/css/base/section.css
+++ b/src/css/base/section.css
@@ -37,6 +37,9 @@ section.section {
         margin: 0;
 		overflow: hidden;
 		z-index: 21;
+		> img {
+	    	min-width: 100%;
+		}
     }
 	.container-fluid,
 	.container {
@@ -64,6 +67,10 @@ section.section {
 			font-size: 1.5em;
 			max-width: 800px;
 			margin: 0 auto;
+
+			& + p {
+				margin-top: 2em;
+			}
 		}
 	}
 }
