added dots to multi-cover

--- a/src/css/base/cover.css
+++ b/src/css/base/cover.css
@@ -1,3 +1,8 @@
+/* owl carousel fix */
+.grabbing {
+    cursor: move;
+}
+
 .cover {
     overflow: hidden;
     position: relative;
@@ -75,6 +80,29 @@
 		@media (min-width:$screen-sm-min) {
 			left: auto;
 			right: 20px;
+		}
+	}
+	.owl-pagination {
+		position: absolute;
+		bottom: 0;
+		text-align: center;
+		width: 100%;
+		.owl-page {
+			display: inline-block;
+			width: 10px;
+			height: 10px;
+			background: #fff;
+			border-radius: 10px;
+			margin: 4px;
+			opacity: 0.4;
+			transition: ease all 500ms;
+			&.active {
+				opacity: 1;
+			}
+			&:hover {
+				color: $color-dark;
+				opacity: 1;
+			}
 		}
 	}
 }
